@@ -4,21 +4,25 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-BOX WIDTH="Box Width"
-BUTTON POSITION="Button Position"
-BUTTON TEXT="Button Text"
-DISPLAY A SEARCH BUTTON="Display a Search Button"
+MOD_SEARCH_FIELD_BOXWIDTH_DESC="Size of the search text box in characters"
+MOD_SEARCH_FIELD_BOXWIDTH_LABEL="Box Width"
+MOD_SEARCH_FIELD_BUTTON_DESC="Display a Search Button"
+MOD_SEARCH_FIELD_BUTTON_LABEL="Search button"
+MOD_SEARCH_FIELD_BUTTONPOS_DESC="Position of the button relative to the search box."
+MOD_SEARCH_FIELD_BUTTONPOS_LABEL="Button Position"
+MOD_SEARCH_FIELD_BUTTONTEXT_DESC="The text that appears in the search button. If left blank, it will load the 'searchbutton' string from your language file."
+MOD_SEARCH_FIELD_BUTTONTEXT_LABEL="Button Text"
+MOD_SEARCH_FIELD_IMAGEBUTTON_DESC="Use an image as button. This image has to be named searchButton.gif and must be located in /images/"
+MOD_SEARCH_FIELD_IMAGEBUTTON_LABEL="Search button as image"
+MOD_SEARCH_FIELD_SETITEMID_DESC="Assign an ItemId for the display of the search results if there is no com_search menu and a specific display is desired. The ItemId may be chosen among those available through the Menu Manager. If you do not know what this means, you may not need it."
+MOD_SEARCH_FIELD_SETITEMID_LABEL="Set ItemID"
+MOD_SEARCH_FIELD_TEXT_DESC="The text that appears in the search text box. If left blank, it will load 'searchbox' string from your language file."
+MOD_SEARCH_FIELD_TEXT_LABEL="Text"
+MOD_SEARCH_FIELD_VALUE_BOTTOM="Bottom"
+MOD_SEARCH_FIELD_VALUE_LEFT="Left"
+MOD_SEARCH_FIELD_VALUE_RIGHT="Right"
+MOD_SEARCH_FIELD_VALUE_TOP="Top"
+MOD_SEARCH_SEARCHBOX_TEXT="search..."
+MOD_SEARCH_SEARCHBUTTON_TEXT="Search"
+MOD_SEARCH_XML_DESCRIPTION="This module will display a search box."
 MOD_SEARCH="Search"
-PARAMBUTTONTEXT="The text that appears in the search button. If left blank, it will load the 'search' string from your language file."
-PARAMTEXT="The text that appears in the search text box. If left blank, it will load 'search box' string from your language file."
-POSITION OF THE BUTTON RELATIVE TO THE SEARCH BOX="Position of the button relative to the search box."
-SEARCH="Search"
-SEARCH BUTTON="Search button"
-SEARCH BUTTON AS IMAGE="Search button as image"
-SEARCH...="search..."
-SEARCH MODULE="Search Module"
-SET ITEMID="Set ItemID"
-SIZE OF THE SEARCH TEXT BOX IN CHARACTERS="Size of the search text box in characters"
-TEXT="Text"
-DESCSEARCH="This module will display a search box."
-USE AN IMAGE AS BUTTON="Use an image as button. This image has to be named searchButton.gif and must be located in /images/system/"
