@@ -16,10 +16,10 @@ require_once dirname(__FILE__).DS.'helper.php';
 $button			= $params->get('button', '');
 $imagebutton	= $params->get('imagebutton', '');
 $button_pos		= $params->get('button_pos', 'left');
-$button_text	= $params->get('button_text', JText::_('Search'));
+$button_text	= $params->get('button_text', JText::_('MOD_SEARCH_SEARCHBUTTON_TEXT'));
 $width			= intval($params->get('width', 20));
 $maxlength		= $width > 20 ? $width : 20;
-$text			= $params->get('text', JText::_('search...'));
+$text			= $params->get('text', JText::_('MOD_SEARCH_SEARCHBOX_TEXT'));
 $set_Itemid		= intval($params->get('set_itemid', 0));
 $moduleclass_sfx = $params->get('moduleclass_sfx', '');
 
